checkpatch-results/home/fedora/lkml-analysis/lkml/0/0000250732.8e73d15569f5a0577a8fa73f87817b476f68864f
WARNING:USE_RELATIVE_PATH: use relative pathname instead of absolute in changelog text
#25: 
/tmp/linux-2.4.28-pre3/include/linux/interrupt.h:16: error: previous declaration of 'irqreturn_t' was here

WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#33: 
--- linux-2.4.28-pre3/drivers/scsi/ips.h.~1~	2004-09-12 00:23:20.000000000 +0200

WARNING:LINUX_VERSION_CODE: LINUX_VERSION_CODE should be avoided, code should be for the version to which it is merged
#40: FILE: drivers/scsi/ips.h:100:
+      #if LINUX_VERSION_CODE < KERNEL_VERSION(2,4,23)

ERROR:SPACING: space required after that ',' (ctx:VxV)
#40: FILE: drivers/scsi/ips.h:100:
+      #if LINUX_VERSION_CODE < KERNEL_VERSION(2,4,23)
                                                ^

Whitespace style used in the kernel sources is described in kernel docs.

See: https://www.kernel.org/doc/html/latest/process/coding-style.html#spaces

ERROR:SPACING: space required after that ',' (ctx:VxV)
#40: FILE: drivers/scsi/ips.h:100:
+      #if LINUX_VERSION_CODE < KERNEL_VERSION(2,4,23)
                                                  ^

WARNING:CONSTANT_COMPARISON: Comparisons should place the constant on the right side of the test
#40: FILE: drivers/scsi/ips.h:100:
+      #if LINUX_VERSION_CODE < KERNEL_VERSION(2,4,23)

Comparisons with a constant or upper case identifier on the left
side of the test should be avoided.

ERROR:CODE_INDENT: code indent should use tabs where possible
#42: FILE: drivers/scsi/ips.h:102:
+         #define IRQ_NONE$

Code indent should use tabs instead of spaces.
Outside of comments, documentation and Kconfig,
spaces are never used for indentation.

See: https://www.kernel.org/doc/html/latest/process/coding-style.html#indentation

ERROR:CODE_INDENT: code indent should use tabs where possible
#43: FILE: drivers/scsi/ips.h:103:
+         #define IRQ_HANDLED$

ERROR:CODE_INDENT: code indent should use tabs where possible
#44: FILE: drivers/scsi/ips.h:104:
+         #define IRQ_RETVAL(x)$

./tmp.EfiDkiSq0Q//home/fedora/lkml-analysis/lkml/0/patch.offset.0000250732.commit.8e73d15569f5a0577a8fa73f87817b476f68864f total: 5 errors, 4 warnings, 0 checks, 17 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

NOTE: Whitespace errors detected.
      You may wish to use scripts/cleanpatch or scripts/cleanfile

./tmp.EfiDkiSq0Q//home/fedora/lkml-analysis/lkml/0/patch.offset.0000250732.commit.8e73d15569f5a0577a8fa73f87817b476f68864f has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
